--- a/ReactJS/andhra-new-districts/src/App.css
+++ b/ReactJS/andhra-new-districts/src/App.css
@@ -1,3 +1,15 @@
 .App {
   text-align: center;
 }
+.act{
+  background-color:grey !important;
+  color:white !important;
+}
+.act:focus{
+  background-color:blue !important;
+  color:white;
+}
+.act:hover{
+  background-color:burlywood !important;
+  color:black !important;
+}
